--- a/solutions/smart-deployment/package.json
+++ b/solutions/smart-deployment/package.json
@@ -16,12 +16,11 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "heft build --clean && rushx pkg-json-lint",
-    "build-test": "rushx copy-lockfile && heft test --clean && rushx pkg-json-lint && rushx remove-lockfile",
+    "build-test": "heft test --clean && rushx pkg-json-lint",
     "cdk": "cdk",
-    "cdk-deploy": "rushx copy-lockfile && rush build && cdk deploy --all --require-approval never --outputs-file Info_Output.log && rushx remove-lockfile",
+    "cdk-deploy": "rush build && cdk deploy --all --require-approval never --outputs-file Info_Output.log",
     "clean": "rm -rf build/* node_modules/* dist/* .nyc_output/*",
     "compile-igs": "ts-node scripts/compile-igs.ts",
-    "copy-lockfile": "cp ../../common/config/rush/pnpm-lock.yaml .",
     "deploy": "cdk deploy --outputs-file Info_Output.log",
     "int-test": "jest test --test-path-pattern=src/integration-tests/*",
     "lint": "eslint . --ext .ts,.tsx",
@@ -29,9 +28,8 @@
     "local": "node .",
     "pkg-json-lint": "npmPkgJsonLint -c ../../.npmpackagejsonlintrc.json ./package.json",
     "release": "yarn run build && yarn run lint && yarn run test",
-    "remove-lockfile": "rm -f pnpm-lock.yaml",
     "sort-package-json": "sort-package-json package.json",
-    "test": "rushx copy-lockfile && heft test --clean --no-build 2>&1 && rushx pkg-json-lint && rushx remove-lockfile",
+    "test": "heft test --clean --no-build 2>&1 && rushx pkg-json-lint",
     "test-coverage": "jest --coverage --testPathPattern=src/*",
     "watch": "tsc -w"
   },
