--- a/solutions/smart-deployment/package.json
+++ b/solutions/smart-deployment/package.json
@@ -58,6 +58,11 @@
     "xmlhttprequest-ssl": "^1.6.2"
   },
   "dependencies": {
+    "@aws/fhir-works-on-aws-authz-smart": "workspace:*",
+    "@aws/fhir-works-on-aws-interface": "workspace:*",
+    "@aws/fhir-works-on-aws-persistence-ddb": "workspace:*",
+    "@aws/fhir-works-on-aws-routing": "workspace:*",
+    "@aws/fhir-works-on-aws-search-es": "workspace:*",
     "@types/aws-lambda": "^8.10.92",
     "aws-cdk-lib": "2.45.0",
     "aws-embedded-metrics": "^2.0.4",
@@ -66,11 +71,6 @@
     "cdk-nag": "^2.19.0",
     "constructs": "^10.0.0",
     "escape-string-regexp": "^4.0.0",
-    "fhir-works-on-aws-authz-smart": "3.1.4",
-    "fhir-works-on-aws-interface": "12.1.1",
-    "fhir-works-on-aws-persistence-ddb": "3.12.0",
-    "fhir-works-on-aws-routing": "6.6.2",
-    "fhir-works-on-aws-search-es": "3.12.0",
     "fs-extra": "^10.1.0",
     "lodash": "^4.17.20",
     "p-settle": "^4.1.1",
