--- a/fwoa-core/interface/package.json
+++ b/fwoa-core/interface/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fhir-works-on-aws-interface",
+  "name": "@aws/fhir-works-on-aws-interface",
   "version": "12.1.0",
   "description": "FHIR Works on AWS hosted on AWS Lambda",
   "homepage": "https://github.com/aws-solutions/fhir-works-on-aws/fwoa-core/interface",
@@ -29,6 +29,7 @@
     "watch": "tsc -w"
   },
   "dependencies": {
+    "lodash": "^4.17.15",
     "winston": "^3.3.3",
     "winston-transport": "^4.4.0"
   },
@@ -40,6 +41,7 @@
     "@rushstack/heft-node-rig": "^1.11.11",
     "@types/heft-jest": "^1.0.3",
     "@types/jest": "^26.0.19",
+    "@types/lodash": "^4.14.157",
     "@types/node": "^14",
     "aws-sdk": "^2.1000.0",
     "aws-sdk-mock": "^5.1.0",
