--- a/.viperlightignore
+++ b/.viperlightignore
@@ -66,3 +66,7 @@ fwoa-core/routing/src/router/middlewares/setLogger.test.ts:63
 fwoa-core/routing/src/router/middlewares/setLogger.test.ts:124  
 fwoa-core/routing/src/router/middlewares/setLogger.test.ts:182  
 fwoa-core/routing/src/router/middlewares/setLogger.test.ts:243  
+fwoa-core/routing/src/router/middlewares/setLogger.test.ts:75
+fwoa-core/routing/src/router/middlewares/setLogger.test.ts:128
+fwoa-core/routing/src/router/middlewares/setLogger.test.ts:186
+fwoa-core/routing/src/router/middlewares/setLogger.test.ts:247
