--- a/.viperlightignore
+++ b/.viperlightignore
@@ -71,3 +71,4 @@ fwoa-core/routing/src/router/middlewares/setLogger.test.ts:182
 fwoa-core/routing/src/router/middlewares/setLogger.test.ts:186 
 fwoa-core/routing/src/router/middlewares/setLogger.test.ts:243  
 fwoa-core/routing/src/router/middlewares/setLogger.test.ts:247
+fwoa-core/interface/src/inputExampleEncryptSelectedField.json:18
