--- a/fwoa-core/interface/package.json
+++ b/fwoa-core/interface/package.json
@@ -30,6 +30,7 @@
     "watch": "tsc -w"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "winston": "^3.3.3",
     "winston-transport": "^4.4.0"
   },
@@ -41,6 +42,7 @@
     "@rushstack/heft-node-rig": "1.11.11",
     "@types/heft-jest": "^1.0.3",
     "@types/jest": "^26.0.19",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^14",
     "aws-sdk": "^2.1000.0",
     "aws-sdk-mock": "^5.1.0",
