--- a/.github/workflows/branch-protection.yml
+++ b/.github/workflows/branch-protection.yml
@@ -14,6 +14,10 @@ jobs:
     name: Only create PR against develop branch, not main or stage branch
     runs-on: ubuntu-20.04
     steps:
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
       - name: Get branch name
         id: branch-name
         uses: tj-actions/branch-names@v5.1
