--- a/.github/workflows/merge-develop-to-stage.yml
+++ b/.github/workflows/merge-develop-to-stage.yml
@@ -15,6 +15,10 @@ jobs:
     runs-on: ubuntu-20.04
     timeout-minutes: 10
     steps:
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
       - name: "Block Concurrent Deployments"
         uses: softprops/turnstyle@v1
         with:
@@ -27,7 +31,7 @@ jobs:
     name: Merge develop to stage
     runs-on: ubuntu-20.04
     # needs: [deploy-fhir, deploy-smart-fhir]
-    steps:
+    steps:    
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
