--- a/.github/workflows/verify-changes.yml
+++ b/.github/workflows/verify-changes.yml
@@ -9,6 +9,10 @@ jobs:
   run-rush-change-verify:
     runs-on: ubuntu-20.04
     steps:
+      - name: Use Node.js 18.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18.x'
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
