fix: update viperlight and paths

--- a/.viperlightignore
+++ b/.viperlightignore
@@ -33,6 +33,7 @@ fwoa-core/search-es/src/schema/compiledSearchParameters.3.0.1.json:4334
 fwoa-core/search-es/src/schema/compiledSearchParameters.3.0.1.json:4338
 fwoa-core/search-es/src/schema/searchMappingsBase.3.0.1.json:1340
 fwoa-core/search-es/src/schema/searchMappingsBase.4.0.1.json:1446
+fwoa-core/javaHapiValidatorLambda/test/*
 
 # Team Email
 .github/temp-workflows/release-pr.yml:28
