fix: fix stage workflow

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,8 +1,9 @@
 name: create-release
-on: workflow_dispatch
+# on: workflow_dispatch
+on: push
 jobs:
   create-release-branch:
-    if: ${{github.ref_name == 'stage'}}
+    # if: ${{github.ref_name == 'stage'}}
     runs-on: ubuntu-20.04
     steps:
       - uses: actions-cool/check-user-permission@v2
@@ -47,7 +48,7 @@ jobs:
       id: open-pr
       uses: repo-sync/pull-request@v2
       with:
-        destination_branch: "main"
+        destination_branch: "test-workflows"
         pr_title: release-${{ steps.date.outputs.date }}
         pr_template: ".github/PULL_REQUEST_TEMPLATE.md"
         pr_label: "auto-release-pr"
@@ -77,7 +78,7 @@ jobs:
           repo: fhir-works-on-aws
           allow_merge_commit: true
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
 
       - name: merge release branch pr to main
         uses: octokit/request-action@v2.x
@@ -92,10 +93,11 @@ jobs:
 
       - name: disable merge commits
         uses: octokit/request-action@v2.x
+        if: always() # Make sure to enable branch protection even if other steps fail
         with:
           route: PATCH /repos/{owner}/{repo}
           owner: aws-solutions
           repo: fhir-works-on-aws
           allow_merge_commit: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
