feat: made changed to the deployment

--- a/solutions/deployment/package.json
+++ b/solutions/deployment/package.json
@@ -23,7 +23,7 @@
     "cdk": "cdk",
     "clean": "rm -rf build/* node_modules/* dist/* .serverless/* .nyc_output/* cdk.out/*",
     "compile-igs": "ts-node scripts/compile-igs.ts",
-    "deploy": "cdk deploy --outputs-file Info_Output.log",
+    "deploy": "rushx cdk deploy --outputs-file Info_Output.log",
     "int-test": "jest --testPathPattern=integration-test/* --runInBand",
     "lint": "eslint . --ext .ts,.tsx",
     "lint-fix": "eslint --fix . --ext .ts,.tsx",
@@ -74,13 +74,13 @@
     "xmlhttprequest-ssl": "^1.6.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-servicecatalogappregistry-alpha": "^2.64.0-alpha.0",
+    "@aws-cdk/aws-servicecatalogappregistry-alpha": "^2.61.0-alpha.0",
     "@aws/fhir-works-on-aws-authz-rbac": "workspace:*",
     "@aws/fhir-works-on-aws-interface": "workspace:*",
     "@aws/fhir-works-on-aws-persistence-ddb": "workspace:*",
     "@aws/fhir-works-on-aws-routing": "workspace:*",
     "@types/aws-lambda": "^8.10.92",
-    "aws-cdk-lib": "^2.64.0",
+    "aws-cdk-lib": "^2.61.0",
     "aws-embedded-metrics": "^2.0.4",
     "aws-sdk": "^2.1000.0",
     "axios": "^0.21.4",
@@ -118,7 +118,7 @@
     "@types/sinon": "^9.0.0",
     "@types/tmp": "^0.2.3",
     "@types/uuid": "^8.3.4",
-    "aws-cdk": "2.45.0",
+    "aws-cdk": "2.61.0",
     "chance": "^1.1.7",
     "esbuild": "^0.14.39",
     "eslint": "^8.7.0",
