--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -48,6 +48,11 @@ jobs:
     - name: Get current date
       id: date
       run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+    
+    - uses: actions/checkout@v3
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        fetch-depth: 0
 
     - name: create-pull-request
       id: open-pr
