--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -1,12 +1,16 @@
 name: create-release
 on: workflow_dispatch
+env:  
+  BOT_USER_EMAIL: ${{ vars.BOT_USER_EMAIL }}
+  BOT_USER_NAME: ${{ vars.BOT_USER_NAME }}
 jobs:
   create-release-branch:
     if: ${{github.ref_name == 'stage'}}
     runs-on: ubuntu-20.04
+    outputs:
+      source_branch: ${{ steps.create_branch.outputs.source_branch }}
     steps:
       - uses: actions-cool/check-user-permission@v2
-        id: check_admin
         with:
           require: 'admin'
           username: ${{ github.triggering_actor }}
@@ -18,35 +22,43 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0
+      - name: Set git config
+        run: |
+          git config user.email $BOT_USER_EMAIL
+          git config user.name $BOT_USER_NAME
       - name: create release branch
+        id: create_branch
         run: |
           echo "Create UUID"
           uuid=`uuidgen`
           echo 'Creating release branch'
           git checkout -b release/$uuid
+          git push -u origin release/$uuid
 
           echo 'Rush version to bump updates'
           node common/scripts/install-run-rush.js version --bump -b release/$uuid --ignore-git-hooks
+          echo "source_branch=release/$uuid" >> $GITHUB_OUTPUT
   
   create-release-branch-pr-to-main:
     runs-on: ubuntu-20.04
-    needs: [create-release-branch]
+    needs: create-release-branch
     outputs:
       pr_number: ${{ steps.open-pr.outputs.pr_number }}
     steps:
+    - name: Get current date
+      id: date
+      run: echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
+    
     - uses: actions/checkout@v3
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
         fetch-depth: 0
-    
-    - name: Get current date
-      id: date
-      run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
 
     - name: create-pull-request
       id: open-pr
       uses: repo-sync/pull-request@v2
       with:
+        source_branch: ${{ needs.create-release-branch.outputs.source_branch }}
         destination_branch: "main"
         pr_title: release-${{ steps.date.outputs.date }}
         pr_template: ".github/PULL_REQUEST_TEMPLATE.md"
@@ -58,17 +70,6 @@ jobs:
     runs-on: ubuntu-20.04
     needs: create-release-branch-pr-to-main
     steps:
-      - name: Get PR info
-        id: pr_info
-        uses: octokit/request-action@v2.x
-        with:
-          route: GET /repos/{owner}/{repo}/pulls/{pull_number}
-          owner: aws-solutions
-          repo: fhir-works-on-aws
-          pull_number: ${{ needs.create-release-branch-pr-to-main.outputs.pr_number }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: enable merge commits
         uses: octokit/request-action@v2.x
         with:
@@ -77,7 +78,7 @@ jobs:
           repo: fhir-works-on-aws
           allow_merge_commit: true
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
 
       - name: merge release branch pr to main
         uses: octokit/request-action@v2.x
@@ -85,17 +86,18 @@ jobs:
           route: PUT /repos/{owner}/{repo}/pulls/{pull_number}/merge
           owner: aws-solutions
           repo: fhir-works-on-aws
-          pull_number: ${{ inputs.pr_number }}
+          pull_number: ${{ needs.create-release-branch-pr-to-main.outputs.pr_number }}
           merge_method: 'merge'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: disable merge commits
         uses: octokit/request-action@v2.x
+        if: always() # Make sure to enable branch protection even if other steps fail
         with:
           route: PATCH /repos/{owner}/{repo}
           owner: aws-solutions
           repo: fhir-works-on-aws
           allow_merge_commit: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
