--- a/solutions/deployment/package.json
+++ b/solutions/deployment/package.json
@@ -23,7 +23,7 @@
     "cdk": "cdk",
     "clean": "rm -rf build/* node_modules/* dist/* .serverless/* .nyc_output/* cdk.out/*",
     "compile-igs": "ts-node scripts/compile-igs.ts",
-    "deploy": "rushx cdk deploy --outputs-file Info_Output.log",
+    "deploy": "cdk deploy --outputs-file Info_Output.log",
     "int-test": "jest --testPathPattern=integration-test/* --runInBand",
     "lint": "eslint . --ext .ts,.tsx",
     "lint-fix": "eslint --fix . --ext .ts,.tsx",
