feat: refactored the new file

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -43,6 +43,10 @@
       "allowedCategories": ["tools"]
     },
     {
+      "name": "@aws/fhir-works-on-aws-utilities",
+      "allowedCategories": ["production", "tools"]
+    },
+    {
       "name": "@elastic/elasticsearch",
       "allowedCategories": ["production"]
     },
