feat: fixed viperlight

--- a/fwoa-utilities/package.json
+++ b/fwoa-utilities/package.json
@@ -20,8 +20,8 @@
     "clean": "rm -rf build/* node_modules/* dist/* .serverless/* .nyc_output/* lib/*",
     "lint-fix": "eslint . --fix",
     "local": "node .",
-    "pkg-json-lint": "npmPkgJsonLint -c ../../.npmpackagejsonlintrc.json .",
-    "prettier": "prettier --config '../../.prettierrc.js' 'src/**/*.ts' --write",
+    "pkg-json-lint": "npmPkgJsonLint -c ../.npmpackagejsonlintrc.json .",
+    "prettier": "prettier --config '../.prettierrc.js' 'src/**/*.ts' --write",
     "prepublish": "tsc",
     "sort-package-json": "sort-package-json package.json",
     "standard-version": "standard-version --skip.tag=true",
