--- a/.github/workflows/test-branch-protection.yml
+++ b/.github/workflows/test-branch-protection.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18.x'
+
       - name: Block Concurrent Deployments
         uses: softprops/turnstyle@v1
         with:
@@ -46,7 +47,15 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
 
-      - run: "echo latest release: '${{ steps.branch-protection.outputs.data }}'"
+      - run: "echo data: '${{ steps.branch-protection.outputs }}'"
+
+      # - run: |
+      #     curl \
+      #     -X DELETE \
+      #     -H "Accept: application/vnd.github+json" \
+      #     -H "Authorization: Bearer ${{ secrets.BOT_TOKEN }}"\
+      #     -H "X-GitHub-Api-Version: 2022-11-28" \
+      #     https://api.github.com/repos/aws-solutions/fhir-works-on-aws/branches/stage-for-testing/protection
 
       - name: enable merge commits
         uses: octokit/request-action@v2.x
