feat: implement CDK Construct for AppRegistry (#28)
Co-authored-by: Samir Sharan <insignias@users.noreply.github.com>

--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -3,6 +3,10 @@
   "$schema": "https://developer.microsoft.com/json-schemas/rush/v5/approved-packages.schema.json",
   "packages": [
     {
+      "name": "@aws-cdk/aws-servicecatalogappregistry-alpha",
+      "allowedCategories": ["production", "tools"]
+    },
+    {
       "name": "@aws-sdk/client-sns",
       "allowedCategories": ["production"]
     },
@@ -37,6 +41,10 @@
     {
       "name": "@aws/fhir-works-on-aws-search-es",
       "allowedCategories": ["tools"]
+    },
+    {
+      "name": "@aws/fhir-works-on-aws-utilities",
+      "allowedCategories": ["production", "tools"]
     },
     {
       "name": "@elastic/elasticsearch",
