--- a/solutions/deployment/package.json
+++ b/solutions/deployment/package.json
@@ -78,8 +78,9 @@
     "@aws/fhir-works-on-aws-interface": "workspace:*",
     "@aws/fhir-works-on-aws-persistence-ddb": "workspace:*",
     "@aws/fhir-works-on-aws-routing": "workspace:*",
+    "@aws/fhir-works-on-aws-utilities": "workspace:*",
     "@types/aws-lambda": "^8.10.92",
-    "aws-cdk-lib": "2.45.0",
+    "aws-cdk-lib": "^2.61.0",
     "aws-embedded-metrics": "^2.0.4",
     "aws-sdk": "^2.1000.0",
     "axios": "^0.21.4",
@@ -117,7 +118,7 @@
     "@types/sinon": "^9.0.0",
     "@types/tmp": "^0.2.3",
     "@types/uuid": "^8.3.4",
-    "aws-cdk": "2.45.0",
+    "aws-cdk": "2.61.0",
     "chance": "^1.1.7",
     "esbuild": "^0.14.39",
     "eslint": "^8.7.0",
