--- a/.gitignore
+++ b/.gitignore
@@ -76,10 +76,14 @@ dist
 coverage
 
 # Implementation guides
-/solutions/smart-on-fhir/implementationGuides
-/solutions/smart-on-fhir/compiledImplementationGuides/*
-!/solutions/smart-on-fhir/compiledImplementationGuides/gitkeep
-/solutions/smart-on-fhir/.webpack/
+/solutions/smart-deployment/implementationGuides
+/solutions/smart-deployment/compiledImplementationGuides/*
+!/solutions/smart-deployment/compiledImplementationGuides/gitkeep
+/solutions/smart-deployment/.webpack/
+/solutions/deployment/implementationGuides
+/solutions/deployment/compiledImplementationGuides/*
+!/solutions/deployment/compiledImplementationGuides/gitkeep
+/solutions/deployment/.webpack/
 fwoa-utilities/javaHapiValidatorLambda/*.class
 fwoa-utilities/javaHapiValidatorLambda/target
 fwoa-utilities/javaHapiValidatorLambda/bin/
