--- a/common/config/rush/browser-approved-packages.json
+++ b/common/config/rush/browser-approved-packages.json
@@ -36,7 +36,7 @@
     },
     {
       "name": "@aws/fhir-works-on-aws-search-es",
-      "allowedCategories": ["tools"]
+      "allowedCategories": ["production", "tools"]
     },
     {
       "name": "@elastic/elasticsearch",
