--- a/solutions/deployment/package.json
+++ b/solutions/deployment/package.json
@@ -28,7 +28,7 @@
     "lint": "eslint . --ext .ts,.tsx",
     "lint-fix": "eslint --fix . --ext .ts,.tsx",
     "local": "node .",
-    "pkg-json-lint": "npmPkgJsonLint -c ../../.npmpackagejsonlintrc.json .",
+    "pkg-json-lint": "npmPkgJsonLint -c ../../.npmpackagejsonlintrc.json . --i ../../.npmpackagejsonlintignore",
     "prepublish": "tsc",
     "release": "rush build && rush lint-fix && rush test",
     "serverless-deploy": "serverless deploy",
@@ -78,6 +78,7 @@
     "@aws/fhir-works-on-aws-interface": "workspace:*",
     "@aws/fhir-works-on-aws-persistence-ddb": "workspace:*",
     "@aws/fhir-works-on-aws-routing": "workspace:*",
+    "@aws/fhir-works-on-aws-search-es": "workspace:*",
     "@types/aws-lambda": "^8.10.92",
     "aws-cdk-lib": "2.45.0",
     "aws-embedded-metrics": "^2.0.4",
@@ -85,7 +86,6 @@
     "axios": "^0.21.4",
     "cdk-nag": "^2.19.0",
     "constructs": "^10.0.0",
-    "fhir-works-on-aws-search-es": "3.12.0",
     "fs-extra": "^10.1.0",
     "inquirer": "^5.0.0",
     "lodash": "^4.17.21",
