--- a/solutions/deployment/package.json
+++ b/solutions/deployment/package.json
@@ -41,6 +41,19 @@
     "test-coverage": "jest --coverage --testPathPattern=src/*",
     "watch": "tsc -w"
   },
+  "jest": {
+    "collectCoverage": true,
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "testEnvironment": "node",
+    "testRegex": ".test.ts",
+    "testRunner": "jest-circus/runner",
+    "transform": {
+      "\\.(ts)$": "ts-jest"
+    }
+  },
   "resolutions": {
     "ansi-regex": "^5.0.1",
     "async": "^3.2.2",
@@ -121,6 +134,7 @@
     "@types/yargs": "^17.0.22",
     "aws-cdk": "2.61.0",
     "chance": "^1.1.7",
+    "dotenv": "^16.0.3",
     "esbuild": "^0.14.39",
     "eslint": "^8.7.0",
     "jest": "^26.6.3",
@@ -142,24 +156,10 @@
     "ts-node": "^10.3.0",
     "typescript": "^4.9.4",
     "uuid": "^8.3.2",
-    "wait-for-expect": "^3.0.2",
-    "dotenv": "^16.0.3"
+    "wait-for-expect": "^3.0.2"
   },
   "engines": {
     "node": ">=18.0.0"
   },
-  "stackname": "fhir-works-on-aws-deployment",
-  "jest": {
-    "collectCoverage": true,
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "testEnvironment": "node",
-    "testRegex": ".test.ts",
-    "testRunner": "jest-circus/runner",
-    "transform": {
-      "\\.(ts)$": "ts-jest"
-    }
-  }
+  "stackname": "fhir-works-on-aws-deployment"
 }
